[gd_scene load_steps=21 format=3 uid="uid://capbmd3qpxsd2"]

[ext_resource type="Script" path="res://Elouann/select_map.gd" id="1_11kat"]
[ext_resource type="Texture2D" uid="uid://botf2ybcg00yw" path="res://ines/arena_0.png" id="2_h7tnh"]
[ext_resource type="Texture2D" uid="uid://d4g5yrb7nc66a" path="res://ines/arena_1.png" id="3_f2fm0"]
[ext_resource type="Theme" uid="uid://hulxhl5602n6" path="res://Elouann/FontTheme.tres" id="4_fx1su"]
[ext_resource type="Texture2D" uid="uid://01i8ak4s75ti" path="res://lise/bottle_front.png" id="4_s52qj"]
[ext_resource type="Texture2D" uid="uid://cbxyirn3gkrsf" path="res://Elouann/Ressources/interoghover.png" id="4_uue6x"]
[ext_resource type="Texture2D" uid="uid://f87xs6qm8fbn" path="res://Elouann/Chara/Chara1.png" id="4_uxudi"]
[ext_resource type="Texture2D" uid="uid://cn0xg6qnkcrdr" path="res://Elouann/Ressources/Interogclick.png" id="5_l2v53"]
[ext_resource type="Texture2D" uid="uid://bxmn8jpopx3kc" path="res://Elouann/Ressources/ArrowHover.png" id="6_aox6m"]
[ext_resource type="Texture2D" uid="uid://bokhnehcv40j" path="res://Elouann/Ressources/interognormal.png" id="6_gcnxc"]
[ext_resource type="PackedScene" uid="uid://byl4rab5kkypr" path="res://remi/fx/fx_clic.tscn" id="7_boxq7"]
[ext_resource type="Texture2D" uid="uid://cb814dnsc0ad4" path="res://Elouann/Ressources/Arrow.png" id="7_ruvsw"]
[ext_resource type="Texture2D" uid="uid://66awn62jgq0r" path="res://Elouann/Bouttons/ExitNormal.png" id="13_icniv"]
[ext_resource type="Texture2D" uid="uid://b4mg5neln76u7" path="res://Elouann/Bouttons/ExitClick.png" id="14_5xqxj"]
[ext_resource type="Texture2D" uid="uid://c2tw4y0fbagge" path="res://Elouann/Bouttons/ExitHover.png" id="15_85vl3"]
[ext_resource type="Texture2D" uid="uid://cj83nqylsruy5" path="res://Elouann/Bouttons/BlackScreen.png" id="16_bc5gi"]

[sub_resource type="Animation" id="Animation_vji5x"]
resource_name = "FadeIn"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D4:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_fiwiu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D4:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_fwfhf"]
resource_name = "FadeOut"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D4:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1d2a3"]
_data = {
"FadeIn": SubResource("Animation_vji5x"),
"FadeOut": SubResource("Animation_fwfhf"),
"RESET": SubResource("Animation_fiwiu")
}

[node name="SelectMap" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_11kat")
MapArray = [ExtResource("2_h7tnh"), ExtResource("3_f2fm0")]
MapNameArray = ["Crowded Bar", "Space"]

[node name="CanvasLayer" type="Control" parent="."]
anchors_preset = 0

[node name="Sprite2D3" type="Sprite2D" parent="CanvasLayer"]
modulate = Color(0.5, 0.5, 0.5, 1)
position = Vector2(160, 90)
texture = ExtResource("2_h7tnh")

[node name="RandomButton" type="TextureButton" parent="CanvasLayer"]
offset_left = 145.0
offset_top = 74.0
offset_right = 175.0
offset_bottom = 104.0
texture_normal = ExtResource("6_gcnxc")
texture_pressed = ExtResource("5_l2v53")
texture_hover = ExtResource("4_uue6x")

[node name="FxClic" parent="CanvasLayer/RandomButton" instance=ExtResource("7_boxq7")]

[node name="StartButton" type="Button" parent="CanvasLayer"]
offset_left = 122.0
offset_top = 146.0
offset_right = 542.0
offset_bottom = 273.0
scale = Vector2(0.198022, 0.198022)
theme = ExtResource("4_fx1su")
theme_override_font_sizes/font_size = 70
alignment = 0

[node name="FxClic" parent="CanvasLayer/StartButton" instance=ExtResource("7_boxq7")]

[node name="MapName" type="Label" parent="CanvasLayer"]
offset_left = 86.0
offset_top = 47.0
offset_right = 230.0
offset_bottom = 81.0
scale = Vector2(1.01772, 1)
theme = ExtResource("4_fx1su")
theme_override_font_sizes/font_size = 10
text = "Crowded Bar"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Main1" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(228, 145)
texture = ExtResource("4_s52qj")

[node name="Main2" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(90, 145)
texture = ExtResource("4_s52qj")

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(270, 123)
texture = ExtResource("4_uxudi")

[node name="Sprite2D2" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(50, 123)
rotation = -3.14159
scale = Vector2(1, -1)
texture = ExtResource("4_uxudi")

[node name="Button" type="TextureButton" parent="CanvasLayer"]
offset_left = 97.0
offset_top = 55.0
offset_right = 116.0
offset_bottom = 74.0
texture_normal = ExtResource("6_aox6m")
texture_pressed = ExtResource("6_aox6m")
texture_hover = ExtResource("7_ruvsw")

[node name="FxClic" parent="CanvasLayer/Button" instance=ExtResource("7_boxq7")]

[node name="Button2" type="TextureButton" parent="CanvasLayer"]
offset_left = 220.0
offset_top = 55.0
offset_right = 239.0
offset_bottom = 74.0
scale = Vector2(-1, 1)
texture_normal = ExtResource("6_aox6m")
texture_pressed = ExtResource("6_aox6m")
texture_hover = ExtResource("7_ruvsw")

[node name="FxClic" parent="CanvasLayer/Button2" instance=ExtResource("7_boxq7")]

[node name="Label11" type="Label" parent="CanvasLayer"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 65.0
offset_top = 9.0
offset_right = 257.0
offset_bottom = 27.0
grow_horizontal = 2
theme = ExtResource("4_fx1su")
theme_override_colors/font_color = Color(0.843137, 0.709804, 0.580392, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.5)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = 6
theme_override_constants/shadow_outline_size = 6
theme_override_font_sizes/font_size = 16
text = "Select Map"
horizontal_alignment = 1

[node name="TextureButton" type="TextureButton" parent="CanvasLayer"]
offset_left = 6.0
offset_top = 11.0
offset_right = 46.0
offset_bottom = 28.0
texture_normal = ExtResource("13_icniv")
texture_pressed = ExtResource("14_5xqxj")
texture_hover = ExtResource("15_85vl3")
ignore_texture_size = true
stretch_mode = 4

[node name="Sprite2D4" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(161.665, 91.2596)
rotation = 3.14159
scale = Vector2(1.93649, -1.76685)
texture = ExtResource("16_bc5gi")

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer"]
libraries = {
"": SubResource("AnimationLibrary_1d2a3")
}
autoplay = "FadeIn"

[node name="Timer" type="Timer" parent="."]

[connection signal="pressed" from="CanvasLayer/RandomButton" to="." method="_on_random_button_pressed"]
[connection signal="pressed" from="CanvasLayer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="CanvasLayer/TextureButton" to="." method="_on_texture_button_pressed"]
[connection signal="animation_finished" from="CanvasLayer/AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
